--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=Tombs of Amascut Puzzle Helper
+author=Crystal Bofa
 support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+description=Plugin for various features within the Tombs of Amascut
+tags=toa
+plugins=com.tombsofamascutpuzzlehelper.TombsOfAmascutPlugin
